--- a/css/main.css
+++ b/css/main.css
@@ -43,4 +43,61 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+* {
+  box-sizing: border-box; }
+
+.container {
+  width: 1100px;
+  padding: 20px;
+  margin: auto; }
+
+.col-1 {
+  flex-basis: 8.3333333333%; }
+
+.col-2 {
+  flex-basis: 16.6666666667%; }
+
+.col-3 {
+  flex-basis: 25%; }
+
+.col-4 {
+  flex-basis: 33.3333333333%; }
+
+.col-5 {
+  flex-basis: 41.6666666667%; }
+
+.col-6 {
+  flex-basis: 50%; }
+
+.col-7 {
+  flex-basis: 58.3333333333%; }
+
+.col-8 {
+  flex-basis: 66.6666666667%; }
+
+.col-9 {
+  flex-basis: 75%; }
+
+.col-10 {
+  flex-basis: 83.3333333333%; }
+
+.col-11 {
+  flex-basis: 91.6666666667%; }
+
+.col-12 {
+  flex-basis: 100%; }
+
+.row {
+  margin: 0 0 27.5px 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%; }
+
+@media screen and (min-width: 1100px) {
+  .container {
+    width: 1100px; } }
+@media screen and (max-width: 1099px) {
+  .container {
+    width: 100vw; } }
+
 /*# sourceMappingURL=main.css.map */
