--- a/css/main.css
+++ b/css/main.css
@@ -47,48 +47,60 @@ table {
   box-sizing: border-box; }
 
 .container {
-  width: 1100px;
+  width: 100vw;
   padding: 20px;
   margin: auto; }
 
 .col-1 {
-  flex-basis: 8.3333333333%; }
+  flex: 8.3333333333%;
+  max-width: 8.3333333333%; }
 
 .col-2 {
-  flex-basis: 16.6666666667%; }
+  flex: 16.6666666667%;
+  max-width: 16.6666666667%; }
 
 .col-3 {
-  flex-basis: 25%; }
+  flex: 25%;
+  max-width: 25%; }
 
 .col-4 {
-  flex-basis: 33.3333333333%; }
+  flex: 33.3333333333%;
+  max-width: 33.3333333333%; }
 
 .col-5 {
-  flex-basis: 41.6666666667%; }
+  flex: 41.6666666667%;
+  max-width: 41.6666666667%; }
 
 .col-6 {
-  flex-basis: 50%; }
+  flex: 50%;
+  max-width: 50%; }
 
 .col-7 {
-  flex-basis: 58.3333333333%; }
+  flex: 58.3333333333%;
+  max-width: 58.3333333333%; }
 
 .col-8 {
-  flex-basis: 66.6666666667%; }
+  flex: 66.6666666667%;
+  max-width: 66.6666666667%; }
 
 .col-9 {
-  flex-basis: 75%; }
+  flex: 75%;
+  max-width: 75%; }
 
 .col-10 {
-  flex-basis: 83.3333333333%; }
+  flex: 83.3333333333%;
+  max-width: 83.3333333333%; }
 
 .col-11 {
-  flex-basis: 91.6666666667%; }
+  flex: 91.6666666667%;
+  max-width: 91.6666666667%; }
 
 .col-12 {
-  flex-basis: 100%; }
+  flex: 100%;
+  max-width: 100%; }
 
 .row {
-  margin: 0 0 27.5px 0;
+  margin: 0 0 2.5vw 0;
   display: flex;
   flex-wrap: wrap;
   width: 100%; }
@@ -98,6 +110,105 @@ table {
     width: 1100px; } }
 @media screen and (max-width: 1099px) {
   .container {
+    width: 800px; } }
+@media screen and (max-width: 800px) {
+  .container {
     width: 100vw; } }
+@media screen and (max-width: 600px) {
+  .col-sm-1 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-2 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-3 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-4 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-5 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-6 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-7 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-8 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-9 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-10 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-11 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-12 {
+    flex: 50%;
+    max-width: 50%; } }
+@media screen and (max-width: 400px) {
+  .col-sm-1 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-2 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-3 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-4 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-5 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-6 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-7 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-8 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-9 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-10 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-11 {
+    flex: 100%;
+    max-width: 100%; }
+
+  .col-sm-12 {
+    flex: 100%;
+    max-width: 100%; } }
 
 /*# sourceMappingURL=main.css.map */
