--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-$grid-width: 1100px;
+$grid-width: 100vw;
 $columns: 12;
 $gutter-width: ($grid-width / $columns) * .3;
 $column-width: ($grid-width / $columns) - $gutter-width;
@@ -17,7 +17,8 @@ $column-width: ($grid-width / $columns) - $gutter-width;
 
 @for $i from 1 through 12 {
     .col-#{$i} {
-        flex-basis: (100 / ($columns / $i)) * 1%;
+        flex: (100 / ($columns / $i)) * 1%;
+        max-width: (100 / ($columns / $i)) * 1%;
     }
 }
 
@@ -35,4 +36,25 @@ $column-width: ($grid-width / $columns) - $gutter-width;
 }
 
 @media screen and (min-width: 1100px) { @include resize(1100px) }
-@media screen and (max-width: 1099px) { @include resize(100vw) }
+@media screen and (max-width: 1099px) { @include resize(800px) }
+@media screen and (max-width: 800px ) { @include resize(100vw) }
+
+@media screen and (max-width: 600px ){
+
+    @for $i from 1 through 12 {
+        .col-sm-#{$i} {
+            flex: 50%;
+            max-width: 50%;
+        }
+    }
+
+}
+
+@media screen and ( max-width: 400px ){
+    @for $i from 1 through 12 {
+        .col-sm-#{$i} {
+            flex: 100%;
+            max-width: 100%;
+        }
+    }
+}
