--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,18 @@ table {
 .container {
   width: 100vw;
   padding: 20px;
-  margin: auto; }
+  margin: auto;
+  background: green; }
+
+.row {
+  margin: 0 0 2.5vw 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background: red; }
+
+[class*="col-"] {
+  background: blue; }
 
 .col-1 {
   flex: 8.3333333333%;
@@ -99,12 +110,54 @@ table {
   flex: 100%;
   max-width: 100%; }
 
-.row {
-  margin: 0 0 2.5vw 0;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%; }
+@media screen and (max-width: 999px) {
+  .col-sm-1 {
+    flex: 8.3333333333%;
+    max-width: 8.3333333333%; }
 
+  .col-sm-2 {
+    flex: 16.6666666667%;
+    max-width: 16.6666666667%; }
+
+  .col-sm-3 {
+    flex: 25%;
+    max-width: 25%; }
+
+  .col-sm-4 {
+    flex: 33.3333333333%;
+    max-width: 33.3333333333%; }
+
+  .col-sm-5 {
+    flex: 41.6666666667%;
+    max-width: 41.6666666667%; }
+
+  .col-sm-6 {
+    flex: 50%;
+    max-width: 50%; }
+
+  .col-sm-7 {
+    flex: 58.3333333333%;
+    max-width: 58.3333333333%; }
+
+  .col-sm-8 {
+    flex: 66.6666666667%;
+    max-width: 66.6666666667%; }
+
+  .col-sm-9 {
+    flex: 75%;
+    max-width: 75%; }
+
+  .col-sm-10 {
+    flex: 83.3333333333%;
+    max-width: 83.3333333333%; }
+
+  .col-sm-11 {
+    flex: 91.6666666667%;
+    max-width: 91.6666666667%; }
+
+  .col-sm-12 {
+    flex: 100%;
+    max-width: 100%; } }
 @media screen and (min-width: 1100px) {
   .container {
     width: 1100px; } }
@@ -115,99 +168,11 @@ table {
   .container {
     width: 100vw; } }
 @media screen and (max-width: 600px) {
-  .col-sm-1 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-2 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-3 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-4 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-5 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-6 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-7 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-8 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-9 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-10 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-11 {
-    flex: 50%;
-    max-width: 50%; }
-
-  .col-sm-12 {
+  [class*="collapse"] {
     flex: 50%;
     max-width: 50%; } }
 @media screen and (max-width: 400px) {
-  .col-sm-1 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-2 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-3 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-4 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-5 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-6 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-7 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-8 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-9 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-10 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-11 {
-    flex: 100%;
-    max-width: 100%; }
-
-  .col-sm-12 {
+  [class*="collapse"] {
     flex: 100%;
     max-width: 100%; } }
 
