--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,8 @@ $column-width: ($grid-width / $columns) - $gutter-width;
 
 .container {
     width: $grid-width;
-    padding: 20px;
+    padding: 0 20px;
     margin: auto;
-    background: green;
 }
 
 .row {
@@ -21,11 +20,7 @@ $column-width: ($grid-width / $columns) - $gutter-width;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background: red;
-}
-
-[class*="col-"]{
-    background: blue;
+    justify-content: space-between;
 }
 
 @mixin resize($width) {
